<resources>
    <string name="app_name">MessA</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <string name="cancel_text">Cancel</string>

    <string name="login_get_started">Let\'s get started...</string>
    <string name="google_login_text">Connect with Google</string>
    <string name="fb_login_text">Connect with Facebook</string>
    <string name="email_login_text">Connect with Email</string>
    <string name="login_terms_text"><![CDATA[I agree to the terms & conditions and privacy policy]]></string>
    <string name="use_email_login_text">Use a email login for now</string>
    <string name="login_email_hint">Email</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_greeting_text">Happy to see you again!</string>
    <string name="login_login_text">Login</string>
    <string name="offline_message">Seems you offline or disconnected</string>
    <string name="new_message_hint">Type new message here...</string>
</resources>
